Add author name, tutors names and the repo link

--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -49,12 +49,12 @@
 
 \lstset{style=mystyle}
 
-\title{Título de la tesis}
-\author{\\\vspace{0.25cm}Nombre del autor}
-\advisor{\\\vspace{0.25cm}Nombre del primer tutor\\\vspace{0.2cm}Nombre del segundo tutor}
+\title{AutoGOAL model-based}
+\author{\\\vspace{0.25cm}Karel Díaz Vergara}
+\advisor{\\\vspace{0.25cm}Carlos Bermudez Porto\\\vspace{0.2cm}Alejandro Piad Morffis}
 \degree{Licenciado en (Matemática o Ciencia de la Computación)}
 \faculty{Facultad de Matemática y Computación}
-\date{Fecha\\\vspace{0.25cm}\href{https://github.com/username/repo}{github.com/username/repo}}
+\date{Fecha\\\vspace{0.25cm}\href{https://github.com/Karelito00/thesis}{github.com/Karelito00/thesis}}
 \logo{Graphics/uhlogo}
 \makenomenclature
 
