--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,oneside]{uhthesis}
+\documentclass[11pt,oneside]{uhthesis}
 \usepackage{subfigure}
 \usepackage[ruled,lined,linesnumbered,titlenumbered,algochapter,spanish,onelanguage]{algorithm2e}
 \usepackage{amsmath}
@@ -14,6 +14,7 @@
 \usepackage{xcolor}
 \usepackage{multicol}
 \usepackage{graphicx}
+\linespread{1.4}
 \floatstyle{plaintop}
 \restylefloat{table}
 \addbibresource{Bibliography.bib}
