Add part of state of the art

--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -66,5 +66,400 @@
   notes = {IEEE TKDE 22 (10), 1345-1359}
 }
 
+@misc { 11,
+  author = {Devlin and Jacob and Chang and Ming-Wei and Lee and Kenton and Toutanova and Kristin},
+  title = {BERT: pretraining of deep bidirectional transformers for language understanding},
+  year = {2019}
+}
 
+@misc { 12,
+  author = {Radford and Alec and Narasimhan and Karthik},
+  title = {Improving Language Understanding by Generative Pretraining},
+  year = {2018}
+}
 
+@misc { 13,
+  author = {Chris Thornton and Frank Hutter and Holger H Hoos and Kevin Leyton Brown},
+  title = {Auto-WEKA: Combined selection and hyperparameter optimization of classification algorithms},
+  year = {2013},
+  notes = {In Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining}
+}
+
+@misc { 14,
+  author = {Haifeng Jin and Qingquan Song and Xia Hu},
+  title = {Auto-Keras: Efficient Neural Architecture Search with Network Morphism},
+  year = {2018},
+  notes = {In Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining}
+}
+
+@misc { 15,
+  author = {M. Feurer and A. Klein and K. Eggensperger and J.T. Springenberg and M. Blum and F. Hutter},
+  title = {Efficient and robust automated machine learning},
+  year = {2015},
+  notes = {In Adv. Neural Inf. Process. Syst., volume 2015-Janua}
+}
+
+@misc { 16,
+  author = {Lucas Zimmer and Marius Lindauer and Frank Hutter},
+  title = {Auto-pytorch: Multi-fidelity metalearning for efficient and robust autodl},
+  year = {2021},
+  notes = {IEEE Transactions on Pattern Analysis and Machine Intelligence}
+}
+
+@misc { 17,
+  author = {Dinsmore},
+  title = {Automated Machine Learning: A Short History.},
+  year = {2016},
+  notes = {Available at https://blog.datarobot.com/automated-machine-learning-short-history}
+}
+
+@misc { 18,
+  author = {Kohavi, R. and John, G. H},
+  title = {Automatic Parameter Selection by Minimizing Estimated Error},
+  year = {1995},
+  notes = {In International Conference on Machine Learning}
+}
+
+@misc { 19,
+  author = {Momma, M. and Bennett, K. P},
+  title = {A Pattern Search Method for Model Selection of Support Vector Regression},
+  year = {2002},
+  notes = {In SIAM International Conference on Data Mining}
+}
+
+@misc { 20,
+  author = {Chen, P.-W. and Wang, J.-Y. and Lee H.-M.},
+  title = {Model selection of SVMs using GA approach},
+  year = {2004},
+  notes = {In IEEE International Joint Conference on Neural Networks}
+}
+
+@misc { 21,
+  author = {Samanta, B.},
+  title = {Gear fault detection using artificial neural networks and support vector machines with genetic algorithms},
+  year = {2004},
+  notes = {Mechanical Systems and Signal Processing}
+}
+
+@misc { 22,
+  author = {Escalante, H. J. and Montes, M. and Luis, V},
+  title = {Particle Swarm Model Selection for Authorship Verification},
+  year = {2009},
+  notes = {Iberoamerican Congress on Pattern Recognition}
+}
+
+@misc { 23,
+  author = {Guyon, I. and Saffari, A. and Dror, G. and Cawley, G.},
+  title = {Analysis of the IJCNN 2007 Agnostic Learning vs. Prior Knowledge Challenge},
+  year = {2008}
+}
+
+@misc { 24,
+  author = {Bergstra, J. and Bardenet, R. and Bengio, Y. and Kégl, B.},
+  title = {Algorithms for Hyper-Parameter Optimization},
+  year = {2011},
+  notes = {In International Conference on Neural Information Processing Systems} 
+}
+
+@misc { 25,
+  author = {Snoek, J. and Larochelle, H. and Adams, R. P},
+  title = {Practical Bayesian Optimization of Machine Learning Algorithms},
+  year = {2012},
+  notes = {In Advances in Neural Information Processing Systems}
+}
+
+@misc { 26,
+  author = {Kanter, J. M. and Veeramachaneni, K.},
+  title = {Deep Feature Synthesis: Towards Automating Data Science Endeavors},
+  year = {2015},
+  notes = {In IEEE International Conference on Data Science and Advanced Analytics}
+}
+
+@misc { 27,
+  author = {Olson, R. S. and Moore, J. H.},
+  title = {TPOT : A Tree-based Pipeline Optimization Tool for Automating Machine Learning},
+  year = {2016},
+  notes = {In International Conference on Machine Learning AutoML Workshop}
+}
+
+@misc { 28,
+  author = {Golovin, D. and Solnik, B. and Moitra, S. and Kochanski, G. and Karro, J. and Sculley, D.},
+  title = {Google Vizier: A Service for Black-Box Optimization},
+  year = {2017},
+  notes = {A Service for Black-Box Optimization. In ACM International Conference on Knowledge Discovery and Data Mining}
+}
+
+@misc { 29,
+  author = {Clouder, A.},
+  title = {Shortening Machine Learning Development Cycle with AutoML.},
+  year = {2018}
+}
+
+@misc { 30,
+  author = {Baidu},
+  title = {EZDL},
+  year = {2018},
+  notes = {Available at http://ai.baidu.com/ezdl/}
+}
+
+@misc { 31,
+  author = {Das, P. and Ivkin, N. and Bansal, T. and Rouesnel, L. and Gautier, P. and Karnin, Z. and Dirac, L. and Ramakrishnan, L. and Perunicic, A. and Shcherbatyi, I. and Wu, W. and Zolic, A. and Shen, H. and Ahmed, A. and Winkelmolen, F. and Miladinovic, M. and Archembeau, C. and Tang, A. and Dutt, B. and Grao, P. and Venkateswar, K.},
+  title = {Amazon SageMaker Autopilot: a white box AutoML solution at scale Piali},
+  year = {2020},
+  notes = {In Data Management for End-to-End Machine Learning}
+}
+
+@misc { 32,
+  author = {Hutter, F. and Kotthoff, L. and Vanschoren, J.},
+  title = {Hyperparameter Optimization.},
+  year = {2018},
+  notes = {In Automatic Machine Learning: Methods, Systems, Challenges}
+}
+
+@misc { 33,
+  author = {R. Kohavi},
+  title = {A study of cross-validation and bootstrap for accuracy estimation and model selection},
+  year = {1995},
+  notes = {In Proc. of IJCAI-95, pages 1137-1145}
+}
+
+@misc { 34,
+  author = {Yoshua Bengio},
+  title = {Learning Deep Architectures for AI},
+  year = {2009},
+  notes = {Foundations and Trends® in Machine Learning}
+}
+
+@misc { 35,
+  author = {Barret Zoph and Quoc V Le},
+  title = {Neural architecture search with reinforcement learning},
+  year = {2016}
+}
+
+@misc { 36,
+  author = {Barret Zoph and Vijay Vasudevan and Jonathon Shlens and Quoc V Le},
+  title = {Learning transferable architectures forscalable image recognition},
+  year = {2018},
+  notes = {In Proceedings of the IEEE conference on computer vision and pattern recognition, pages 8697–8710}
+}
+
+@misc { 37,
+  author = {Chenxi Liu and Barret Zoph and Maxim Neumann and Jonathon Shlens and Wei Hua and Li-Jia Li and Li Fei-Fei and Alan Yuille and Jonathan Huang and Kevin Murphy},
+  title = {Progressive neural architecture search},
+  year = {2018},
+  notes = {In Proceedings of the European Conference on Computer Vision (ECCV), pages 19-34}
+}
+
+@misc { 38,
+  author = {Hanxiao Liu and Karen Simonyan and Oriol Vinyals and Chrisantha Fernando and Koray Kavukcuoglu},
+  title = {Hierarchical representations for efficient architecture search},
+  year = {2017}
+}
+
+@misc { 39,
+  author = {Han Cai and Tianyao Chen and Weinan Zhang and Yong Yu and Jun Wang},
+  title = {Efficient architecture search by network transformation},
+  year = {2018},
+  notes = {In Thirty-Second AAAI Conference on Artificial Intelligence}
+}
+
+@misc { 40,
+  author = {Elad Hoffer and Itay Hubara and Daniel Soudry},
+  title = {Train longer, generalize better: Closing the generalization gap in large batch training of neural networks},
+  year = {2017},
+  notes = {In Proceedings of the 31st International Conference on Neural Information Processing Systems, NIPS'17, pages 1729-1739}
+}
+
+@misc { 41,
+  author = {Liam Li and Ameet Talwalkar},
+  title = {Random search and reproducibility for neural architecture search},
+  year = {2019}
+}
+
+@misc { 42,
+  author = {Richard S Sutton and Andrew G Barto},
+  title = {Introduction to reinforcement learning},
+  year = {1998}
+}
+
+@misc { 43,
+  author = {Barret Zoph and Quoc V Le},
+  title = {Neural architecture search with reinforcement learning},
+  year = {2016}
+}
+
+@misc { 44,
+  author = {Ronald J Williams},
+  title = {Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+  year = {1992}
+}
+
+@misc { 45,
+  author = {Bowen Baker and Otkrist Gupta and Nikhil Naik and Ramesh Raskar},
+  title = {Designing neural network architectures using reinforcement learning},
+  year = {2016}
+}
+
+@misc { 46,
+  author = {Hanxiao Liu and Karen Simonyan and Yiming Yang},
+  title = {Darts: Differentiable architecture search},
+  year = {2018}
+}
+
+@misc { 47,
+  author = {Richard Shin and Charles Packer and Dawn Song},
+  title = {Differentiable neural network architecture search},
+  year = {2018}
+}
+
+@misc { 48,
+  author = {Karim Ahmed and Lorenzo Torresani},
+  title = {Maskconnect: Connectivity learning by gradient descent},
+  year = {2018}
+}
+
+@misc { 49,
+  author = {Kirthevasan Kandasamy and Willie Neiswanger and Jeff Schneider and Barnabas Poczos and Eric Xing},
+  title = {Neural architecture search with bayesian optimisation and optimal transport},
+  year = {2018}
+}
+
+@misc { 50,
+  author = {Kevin Swersky and David Duvenaud and Jasper Snoek and Frank Hutter and Michael A Osborne},
+  title = {Raiders of the lost architecture: Kernels for bayesian optimization in conditional parameter spaces},
+  year = {2014}
+}
+
+@misc { 51,
+  author = {James S Bergstra and Rémi Bardenet and Yoshua Bengio and Balázs Kégl},
+  title = {Algorithms for hyper-parameter optimization},
+  year = {2011}
+}
+
+@misc {52, 
+  author = {James Bergstra and Daniel Yamins and David Daniel Cox},
+  title = {Making a science of model search: Hyperparameter optimization in hundreds of dimensions for vision architectures},
+  year = {2013}
+}
+
+@misc { 53,
+  author = {Tobias Domhan and Jost Tobias Springenberg and Frank Hutter},
+  title = {Speeding up automatic hyperparameter optimization of deep neural networks by extrapolation of learning curves},
+  year = {2015}
+}
+
+@misc { 54,
+  author = {Hector Mendoza and Aaron Klein and Matthias Feurer and Jost Tobias Springenberg and Frank Hutter},
+  title = {Towards automatically-tuned neural networks},
+  year = {2016}
+}
+
+@misc { 55,
+  author = {Aaron Klein and Eric Christiansen and Kevin Murphy and Frank Hutter},
+  title = {Towards reproducible neural architecture and hyperparameter search},
+  year = {2018}
+}
+
+@misc { 56,
+  author = {Zhao Zhong and Zichen Yang and Boyang Deng and Junjie Yan and Wei Wu and Jing Shao and Cheng-Lin Liu},
+  title = {Blockqnn: Efficient block-wise neural network architecture generation},
+  year = {2018}
+}
+
+@misc { 57,
+  author = {Arber Zela and Aaron Klein and Stefan Falkner and Frank Hutter},
+  title = {Towards automated deep learning: Efficient joint neural architecture and hyperparameter search},
+  year = {2018}
+}
+
+@misc { 58,
+  author = {Aaron Klein and Stefan Falkner and Simon Bartels and Philipp Hennig and Frank Hutter},
+  title = {Fast Bayesian Optimization of Machine Learning Hyperparameters on Large Datasets},
+  year = {2017},
+  notes = {In Aarti Singh and Jerry Zhu, editors, Proceedings of the 20th International Conference on Artificial Intelligence and Statistics, volume 54 of Proceedings of Machine Learning Research, pages 528-536, Fort Lauderdale, FL, USA}
+}
+
+@misc { 59,
+  author = {Patryk Chrabaszcz and Ilya Loshchilov and Frank Hutter},
+  title = {A downsampled variant of imagenet as an alternative to the CIFAR datasets},
+  year = {2017}
+}
+
+@misc { 60,
+  author = {Lisha Li and Kevin Jamieson and Giulia DeSalvo and Afshin Rostamizadeh and Ameet Talwalkar},
+  title = {Hyperband: bandit-based configuration evaluation for hyperparameter optimization},
+  year = {2017},
+  notes = {In International Conference on Learning Representations}
+}
+
+@misc { 61,
+  author = {Stefan Falkner and Aaron Klein and Frank Hutter},
+  title = {BOHB: Robust and efficient hyperparameter optimization at scale},
+  year = {2018},
+  notes = {In Jennifer Dy and Andreas Krause, editors, Proceedings of the 35th International Conference on Machine Learning, volume 80 of Proceedings of Machine Learning Research, pages 14361445, Stockholmsmssan, Stockholm Sweden}
+}
+
+@misc { 62,
+  author = {Hieu Pham and Melody Y. Guan and Barret Zoph and Quoc V. Le and Jeff Dean},
+  title = {Efficient neural architecture search via parameters sharing},
+  year = {2018}
+}
+
+@misc { 63,
+  author = {Zichao Guo},
+  title = {Single path one-shot neural architecture search with uniform sampling},
+  year = {2020}
+}
+
+@misc { 64,
+  author = {Esteban Real},
+  title = {Large-scale evolution of image classifiers},
+  year = {2017}
+}
+
+@misc { 65,
+  author = {Andrew Brock and Theodore Lim and James M. Ritchie and Nick Weston},
+  title = {SMASH: one-shot model architecture search through hypernetworks},
+  year = {2017}
+}
+
+@misc { 66,
+  author = {Thomas Elsken and Jan Hendrik Metzen and Frank Hutter},
+  title = {Simple And Efficient Architecture Search for Convolutional Neural Networks},
+  year = {2017},
+  notes = {In NIPS Workshop on Meta-Learning}
+}
+
+@misc { 67,
+  author = {Thomas Elsken and Jan Hendrik Metzen and Frank Hutter},
+  title = {Efficient multi-objective neural architecture search via lamarckian evolution},
+  year = {2019},
+  notes = {In International Conference on Learning Representations}
+}
+
+@misc { 68,
+  author = {Esteban Real and Alok Aggarwal and Yanping Huang, and Quoc V. Le},
+  title = {Aging Evolution for Image Classifier Architecture Search},
+  year = {2019}
+}
+
+@misc { 69,
+  author = {Han Cai and Jiacheng Yang and Weinan Zhang and Song Han and Yong Yu},
+  title = {Path-Level Network Transformation for Efficient Architecture Search},
+  year = {2018},
+  notes = {In International Conference on Machine Learning}
+}
+
+@misc { 70,
+  author = {Gao Huang and Zhuang Liu and Kilian Q. Weinberger},
+  title = {Densely Connected Convolutional Networks},
+  year = {2017},
+  notes = {In Conference on Computer Vision and Pattern Recognition}
+}
+
+@misc { 71,
+  author = {Suilan Estevez Velarde and Yoan Gutiérrez and Yudivián Almeida Cruz and Andrés Montoyo},
+  title = {General-purpose hierarchical optimisation of machine learning pipelines with grammatical evolution},
+  year = {2020},
+  notes = {Information Sciences}
+}
