--- a/document/MainMatter/Introduction.tex
+++ b/document/MainMatter/Introduction.tex
@@ -10,10 +10,10 @@ El AutoML es el proceso de automatizar la resolución de problemas de \textit{ma
 
 Un modelo pre-entrenado es un modelo creado y entrenado con un conjunto de datos con el fin de resolver un problema similar, en vez de construir uno desde cero podemos usar un modelo pre-entrenado como punto de entrada. Existen varios beneficios de usar modelos preentrenados, reduce el tiempo computacional, te permite usar modelos en el estado del arte sin tener que entrenar uno de cero, cuando usamos un modelo preentrenado, lo entrenamos en un conjunto de datos específicos para la tarea que necesitamos realizar, este proceso es conocido como \textit{fine-tuning}, una técnica de entrenamiento poderosa. Una gran ventaja de hacer \textit{fine-tuning} a modelos preentrenados es fuerte rendimiento en cualquier momento, el uso de modelos preentrenados a menudo permite obtener órdenes de magnitudes de rendimiento más rápido que cuando se entrena un modelo desde cero. \\
 
-Modelos preentrenados de grandes escalas como BERT y GPT han logrado recientemente un gran éxito y se han convertido en un hito en la inteligencia artificial. Debido a los sofisticados objetivos de preentrenamiento y los enormes parámetros del modelo, los modelos preentrenados a gran escala pueden capturar conocimiento de manera efectiva a partir de datos masivos etiquetados y no etiquetados. Al almacenar conocimiento en enormes parámetros y afinar tareas específicas, el rico conocimiento codificado implícitamente en parámetros enormes puede beneficiar una variedad de tareas posteriores, lo que se ha demostrado ampliamente a través de la verificación experimental y el análisis empírico \\
+Modelos preentrenados de grandes escalas como BERT \parencite{11} y GPT \parencite{12} han logrado recientemente un gran éxito y se han convertido en un hito en la inteligencia artificial. Debido a los sofisticados objetivos de preentrenamiento y los enormes parámetros del modelo, los modelos preentrenados a gran escala pueden capturar conocimiento de manera efectiva a partir de datos masivos etiquetados y no etiquetados. Al almacenar conocimiento en enormes parámetros y afinar tareas específicas, el rico conocimiento codificado implícitamente en parámetros enormes puede beneficiar una variedad de tareas posteriores, lo que se ha demostrado ampliamente a través de la verificación experimental y el análisis empírico \\
 
 \section*{Antecedentes}
-Ante la creciente demanda en la industria son muchas las librerías de código abierto que se han sumado al desarrollo de \textit{frameworks} para la automatización y solución de problemas de \textit{machine learning}, entre las más conocidas tenemos AutoWEKA, AutoKeras, Auto-sklearn, Auto-PyTorch; los cuales se han enfocado en la solución de modelos de aprendizaje supervisado.\\
+Ante la creciente demanda en la industria son muchas las librerías de código abierto que se han sumado al desarrollo de \textit{frameworks} para la automatización y solución de problemas de \textit{machine learning}, entre las más conocidas tenemos AutoWEKA \parencite{13}, AutoKeras \parencite{14}, Auto-sklearn \parencite{15}, Auto-PyTorch \parencite{16}; los cuales se han enfocado en la solución de modelos de aprendizaje supervisado.\\
 
 Una segunda ola de AutoML inició en el 2010 con la introducción de modelos basados en Bayesian Optimization / Sequential Model-Based Optimization (SMBO) para la optimización de hiperparámetros y la selección de algoritmos \parencite{8} \parencite{3}. La idea intuitiva de estos métodos es usar un modelo sustito para estimar las relaciones entre performance e hiperparámetros, y usar esta estimación para guiar el proceso de optimización a través de una función de adquisición. En el 2013 Thornton et al. introdujo Auto-WEKA, un método de AutoML basado en SMBO capaz de construir pipelines de clasificación en la popular plataforma WEKA \parencite{4}. Los autores definieron el problema de CASH, el cual se asemeja a la tarea de la selección del modelo completo. Auto-WEKA se basó en un método de SMBO llamado SMAC \parencite{3} con un estimador de random forest. Este método potenció la investigación en SMBO para AutoML tal que a día de hoy es el enfoque de optimización dominante en el campo. \\
 
@@ -23,6 +23,9 @@ Los primeros esfuerzos de pre-entrenamiento están principalmente involucrados e
 
 
 \section*{Problema}
+AutoGOAL \parencite{71} es una biblioteca de Python para encontrar automáticamente la mejor manera de resolver una tarea determinada. Se ha diseñado principalmente para el AutoML, pero se puede usar en cualquier escenario en el que tenga varias formas posibles de resolver una tarea determinada.
+
+Técnicamente hablando, AutoGOAL es un marco para la síntesis de programas, es decir, encontrar el mejor programa para resolver un problema dado, siempre que el usuario pueda describir el espacio de todos los programas posibles. AutoGOAL proporciona un conjunto de componentes de bajo nivel para definir diferentes espacios y buscar eficientemente en ellos. En el contexto específico del \textit{machine learning}, AutoGOAL también proporciona componentes de alto nivel que se pueden usar como una caja negra en casi cualquier tipo de problema y formato de conjunto de datos.
 
 Actualmente no existe mucha información acerca del uso de modelos pre-entrenados en los distintos métodos de AutoML, por lo que añadirlos al dominio de algoritmos de AutoML puede generar excelentes resultados en menor costo temporal y computacional, así como sustituir algunos modelos que son entrenados desde cero.
 
