--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -2,6 +2,8 @@
 \usepackage{subfigure}
 \usepackage[ruled,lined,linesnumbered,titlenumbered,algochapter,spanish,onelanguage]{algorithm2e}
 \usepackage{amsmath}
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
 \usepackage{amssymb}
 \usepackage{amsbsy}
 \usepackage{caption,booktabs}
