--- a/document/MainMatter/Introduction.tex
+++ b/document/MainMatter/Introduction.tex
@@ -2,7 +2,7 @@
 \addcontentsline{toc}{chapter}{Introducción}
 
 \section*{Motivación}
-Con el transcurso de los años, la inteligencia artificial ha tomado un papel importante en la sociedad, se han visto grandes avances en diferentes campos gracias a este, como lo es en la medicina ya sea para la detección de tumores, el desarrollo de diagnósticos, la creación de medicamentos; o por ejemplo en el procesamiento del lenguaje natural para automatizar procesos de atención al cliente, traducción, motores de búsquedas, etc. Incluso las grandes industrias se han ido alineando a estas técnicas, un ejemplo de esto es el servicio de aws \textbf{Machine Learning} que entre sus casos de usos está la recomendación perzonalizada a clientes, o la extracción y análisis automatizado de datos, identificar actividades fraudulentas, entre otros; así mismo podemos encontrar servicios en diferentes empresas que nos proveen de herramientas poderosas en el dominio de la inteligencia artificial y asi potenciar la eficacia de nuestras tareas. Esto se ha logrado gracias al arduo trabajo de científicos en el tema, por lo que debido a su complejidad, con el tiempo ha surgido una comunidad con el objetivo de desarrollar métodos para resolver estos problemas prescindiendo del conocimiento de expertos, así las personas tienen a su alcance una herramienta que les permite encontrar soluciones sin necesariamente conocer las librerías que actúan. Estos métodos forman el área llamada AutoML o \textit{Auto Machine Learning}.\\
+Con el transcurso de los años, la inteligencia artificial ha tomado un papel importante en la sociedad, se han visto grandes avances en diferentes campos gracias a este, como lo es en la medicina ya sea para la detección de tumores, el desarrollo de diagnósticos, la creación de medicamentos; o por ejemplo en el procesamiento del lenguaje natural para automatizar procesos de atención al cliente, traducción, motores de búsquedas, etc. Incluso las grandes industrias se han ido alineando a estas técnicas, un ejemplo de esto es el servicio de aws \textbf{Machine Learning} que entre sus casos de usos está la recomendación personalizada a clientes, o la extracción y análisis automatizado de datos, identificar actividades fraudulentas, entre otros; así mismo podemos encontrar servicios en diferentes empresas que nos proveen de herramientas poderosas en el dominio de la inteligencia artificial y así potenciar la eficacia de nuestras tareas. Esto se ha logrado gracias al arduo trabajo de científicos en el tema, por lo que debido a su complejidad, con el tiempo ha surgido una comunidad con el objetivo de desarrollar métodos para resolver estos problemas prescindiendo del conocimiento de expertos, así las personas tienen a su alcance una herramienta que les permite encontrar soluciones sin necesariamente conocer las librerías que actúan. Estos métodos forman el área llamada AutoML o \textit{Auto Machine Learning}.\\
 
 El AutoML es el proceso de automatizar la resolución de problemas de \textit{machine learning} en sus diferentes etapas, como el preproceso y limpieza de los datos, la selección de \textit{features}, selección del conjunto de algoritmos a utilizar, la configuración de los parámetros, la optimización de estos procesos, entre otros, con el objetivo de que se reduzca considerablemente el tiempo del humano en la investigación y el diseño de modelos de machine learning, mayormente se han enfocado en el estudio de \textit{supervised learning} aunque ya también se está explorando el contexto de \textit{unsupervised learning} \parencite{1} y \textit{semi supervised learning} \parencite{2}. La combinación de AutoML con metodologías de optimización para el despliegue de modelos de \textit{machine learning} es una herramienta trascendente para la democratización de la inteligencia artificial.\\
 
@@ -15,7 +15,7 @@ Modelos preentrenados de grandes escalas como BERT \parencite{11} y GPT \parenci
 \section*{Antecedentes}
 Ante la creciente demanda en la industria son muchas las librerías de código abierto que se han sumado al desarrollo de \textit{frameworks} para la automatización y solución de problemas de \textit{machine learning}, entre las más conocidas tenemos AutoWEKA \parencite{13}, AutoKeras \parencite{14}, Auto-sklearn \parencite{15}, Auto-PyTorch \parencite{16}; los cuales se han enfocado en la solución de modelos de aprendizaje supervisado.\\
 
-Una segunda ola de AutoML inició en el 2010 con la introducción de modelos basados en Bayesian Optimization / Sequential Model-Based Optimization (SMBO) para la optimización de hiperparámetros y la selección de algoritmos \parencite{8} \parencite{3}. La idea intuitiva de estos métodos es usar un modelo sustito para estimar las relaciones entre performance e hiperparámetros, y usar esta estimación para guiar el proceso de optimización a través de una función de adquisición. En el 2013 Thornton et al. introdujo Auto-WEKA, un método de AutoML basado en SMBO capaz de construir pipelines de clasificación en la popular plataforma WEKA \parencite{4}. Los autores definieron el problema de CASH, el cual se asemeja a la tarea de la selección del modelo completo. Auto-WEKA se basó en un método de SMBO llamado SMAC \parencite{3} con un estimador de random forest. Este método potenció la investigación en SMBO para AutoML tal que a día de hoy es el enfoque de optimización dominante en el campo. \\
+Una segunda ola de AutoML inició en el 2010 con la introducción de modelos basados en Bayesian Optimization / Sequential Model-Based Optimization (SMBO) para la optimización de hiperparámetros y la selección de algoritmos \parencite{8} \parencite{3}. La idea intuitiva de estos métodos es usar un modelo sustituto para estimar las relaciones entre performance e hiperparámetros, y usar esta estimación para guiar el proceso de optimización a través de una función de adquisición. En el 2013 Thornton et al. introdujo Auto-WEKA, un método de AutoML basado en SMBO capaz de construir pipelines de clasificación en la popular plataforma WEKA \parencite{4}. Los autores definieron el problema de CASH, el cual se asemeja a la tarea de la selección del modelo completo. Auto-WEKA se basó en un método de SMBO llamado SMAC \parencite{3} con un estimador de random forest. Este método potenció la investigación en SMBO para AutoML tal que a día de hoy es el enfoque de optimización dominante en el campo. \\
 
 También, metodologías alternativas no relacionadas a la formulación probabilística fueron propuestas. Por ejemplo, Rosales et al. desarrolló una metodología de AutoMl basada en optimización multi-objetivo y modelos sustitutos \parencite{5}. Un regresor fue usado para estimar el performance de soluciones de forma tal que solo las prometedoras fueran evaluadas con la función de objetivo de costo. Esta solución comparte el espíritu de SMBO pero se enfoca de una forma diferente. En los años siguientes soluciones basadas en SMBO han sido propuestas, más notablemente AutoSklearn \parencite{6}. Este método surgió en el contexto de desafíos académicos. AutoSklearn es basado en SMBO con la diferencia de que el proceso de búsqueda es inicializado con meta-learning lo que dirige la búsqueda a modelos prometedores. También este método genera un conjunto de soluciones exploradas durante el proceso de búsqueda. AutoSklearn ganó una serie de desafíos de AutoML, con gran margen en algunos escenarios \parencite{7}, incluso superaron a humanos que tenían como objetivo afinar un modelo. AutoSklearn fue publicado y a día de hoy es muy popular. \\
 
